Add BooksList class v2 (error fixed)

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-|<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -54,6 +54,7 @@
       <!-- ratings -->
       <div class="book__rating">
         <div class="book__rating__fill">
+        style=style="width: {{ratingWidth}}%; background: {{ratingBgc}};">
           {{ rating }}/10
         </div>
       </div>
