--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
       <!-- ratings -->
       <div class="book__rating">
         <div class="book__rating__fill">
-        style=style="width: {{ratingWidth}}%; background: {{ratingBgc}};">
+        style="width: {{ratingWidth}}%; background: {{ratingBgc}};">
           {{ rating }}/10
         </div>
       </div>
