feat: added search, sorting, state persistence and favorites support
- Extended UI with search input, sort dropdown, and filters (index.html)
- Added styles for controls in style.scss
- Implemented search, sorting, and state save/load via localStorage in script.js

- Added 'Favorites' section with full add/remove support
- Clicking a cover toggles favorite status; Favorites section shows selected items
- Favorites list is saved to localStorage and sorted to top of main list

- Added 'No favorites' message and 'Clear favorites' button
- Empty state handling, button styles, and logic for clearing implemented

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,34 @@
 
       <!-- FILTERS FORM -->
       <section class="filters">
-        <div>
+        <div class="filters__group">
           <label>
             Adults only: <input name="filter" value="adults" type="checkbox">
           </label>
           <label>
             Non-fiction: <input name="filter" value="nonFiction" type="checkbox">
+          </label>
+        </div>
+        <div class="filters__group filters__controls">
+          <label class="filters__search">
+            Search:
+            <input type="search" name="search" data-search placeholder="Title">
+          </label>
+          <label>
+            Sort by:
+            <select name="sortBy" data-sort-by>
+              <option value="default">Default</option>
+              <option value="name">Title</option>
+              <option value="price">Price</option>
+              <option value="rating">Rating</option>
+            </select>
+          </label>
+          <label>
+            Direction:
+            <select name="sortDir" data-sort-dir>
+              <option value="asc">Asc</option>
+              <option value="desc">Desc</option>
+            </select>
           </label>
         </div>
       </section>
@@ -31,12 +53,22 @@
         <ul class="books-list">
         </ul>
       </section>
+
+      <!-- FAVORITES PANEL -->
+      <section class="favorites-panel">
+        <h2>Favorites</h2>
+        <div class="favorites-actions">
+          <button type="button" class="favorites-clear" data-clear-favorites>Clear favorites</button>
+        </div>
+        <p class="favorites-empty" data-favorites-empty>Brak ulubionych.</p>
+        <ul class="favorites-list"></ul>
+      </section>
     </div>
   </main>
 
   <!-- BOOK TEMPLATE -->
   <script id="template-book" type="text/x-handlebars-template">
-    <li class="book">
+    <li class="book {{#if isFavorite}}book--favorite{{/if}}">
 
       <!-- title and price -->
       <header class="book__header">
@@ -53,8 +85,7 @@
 
       <!-- ratings -->
       <div class="book__rating">
-        <div class="book__rating__fill"
-        style="width: {{ratingWidth}}%; background: {{ratingBgc}};">
+        <div class="book__rating__fill" style="width: {{ ratingWidth }}%; background: {{ ratingBgc }};">
           {{ rating }}/10
         </div>
       </div>
